WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21330
Fix Gtk adjustments in ScrollView
https://bugs.webkit.org/show_bug.cgi?id=21330
Summary
Fix Gtk adjustments in ScrollView
Dave Hyatt
Reported
2008-10-03 01:10:51 PDT
Fix Gtk adjustments in ScrollView
Attachments
Patch
(11.42 KB, patch)
2008-10-03 01:11 PDT
,
Dave Hyatt
oliver
: review+
Details
Formatted Diff
Diff
Patch
(11.28 KB, patch)
2008-10-03 01:17 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch #3
(13.06 KB, patch)
2008-10-03 01:40 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch #4
(13.08 KB, patch)
2008-10-03 01:46 PDT
,
Dave Hyatt
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2008-10-03 01:11:13 PDT
Created
attachment 24042
[details]
Patch
Oliver Hunt
Comment 2
2008-10-03 01:14:39 PDT
Comment on
attachment 24042
[details]
Patch r=me, this looks sane in as much as i can follow.
Dave Hyatt
Comment 3
2008-10-03 01:17:32 PDT
Created
attachment 24043
[details]
Patch
Dave Hyatt
Comment 4
2008-10-03 01:40:34 PDT
Created
attachment 24044
[details]
Patch #3
Dave Hyatt
Comment 5
2008-10-03 01:46:16 PDT
Created
attachment 24045
[details]
Patch #4
Oliver Hunt
Comment 6
2008-10-03 01:48:45 PDT
Comment on
attachment 24045
[details]
Patch #4 r=me
Dave Hyatt
Comment 7
2008-10-03 01:50:41 PDT
Fixed in
r37232
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug