2008-10-03  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21330

        Fix Gtk adjustments so that they are properly checked again before creating horizontal/vertical
        scrollbars.

        Reviewed by Oliver Hunt

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::setHasHorizontalScrollbar):
        (WebCore::ScrollView::setHasVerticalScrollbar):
        (WebCore::ScrollView::platformHasHorizontalAdjustment):
        (WebCore::ScrollView::platformHasVerticalAdjustment):
        * platform/ScrollView.h:
        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::adjustmentChanged):
        (WebCore::ScrollView::ScrollView):
        (WebCore::ScrollView::~ScrollView):
        (WebCore::ScrollView::setGtkAdjustments):
        (WebCore::ScrollView::platformHandleHorizontalAdjustment):
        (WebCore::ScrollView::platformHandleVerticalAdjustment):



Canonical link: https://commits.webkit.org/29491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37232 268f45cc-cd09-0410-ab3c-d52691b4dbfc