WebCore/platform/ScrollView.h
@@ -137,7 +137,10 @@ public:
     
     // This method scrolls by lines, pages or pixels.
     bool scroll(ScrollDirection, ScrollGranularity);
-    
+        
+    // Scroll the actual contents of the view (either blitting or invalidating as needed).
+    void scrollContents(const IntSize& scrollDelta);
+
     // This gives us a means of blocking painting on our scrollbars until the first layout has occurred.
     void setScrollbarsSuppressed(bool suppressed, bool repaintOnUnsuppress = false);
     bool scrollbarsSuppressed() const { return m_scrollbarsSuppressed; }
@@ -242,9 +245,6 @@ private:
     // Called to update the scrollbars to accurately reflect the state of the view.
     void updateScrollbars(const IntSize& desiredOffset);
 
-    // Scroll the actual contents of the view (either blitting or invalidating as needed).
-    void scrollContents(const IntSize& scrollDelta);
-
     // These methods are used to create/destroy scrollbars.
     void setHasHorizontalScrollbar(bool);
     void setHasVerticalScrollbar(bool);
@@ -266,6 +266,8 @@ private:
     bool platformIsOffscreen() const;
     bool platformHandleHorizontalAdjustment(const IntSize&);
     bool platformHandleVerticalAdjustment(const IntSize&);
+    bool platformHasHorizontalAdjustment() const;
+    bool platformHasVerticalAdjustment() const;
 
 #if PLATFORM(MAC) && defined __OBJC__
 public:
@@ -273,14 +275,6 @@ public:
 
 private:
     NSScrollView<WebCoreFrameScrollView>* scrollView() const;
-#endif
-
-#if !PLATFORM(MAC) && !PLATFORM(WIN) && !PLATFORM(QT)
-// FIXME: ScrollViewPrivate will eventually be completely gone.
-    class ScrollViewPrivate;
-    ScrollViewPrivate* m_data;
-
-    friend class ScrollViewPrivate; // FIXME: Temporary.
 #endif
 
 #if !PLATFORM(MAC) && !PLATFORM(WX)
@@ -299,6 +293,9 @@ private:
 #if PLATFORM(GTK)
 public:
     void setGtkAdjustments(GtkAdjustment* hadj, GtkAdjustment* vadj);
+    GtkAdjustment* m_horizontalAdjustment;
+    GtkAdjustment* m_verticalAdjustment;
+    void setScrollOffset(const IntSize& offset) { m_scrollOffset = offset; }
 #endif
 
 #if PLATFORM(WX)
@@ -307,6 +304,8 @@ public:
 
 private:
     void adjustScrollbars(int x = -1, int y = -1, bool refresh = true);
+    class ScrollViewPrivate;
+    ScrollViewPrivate* m_data;
 #endif
 
 }; // class ScrollView
